--- a/pages/staff.html
+++ b/pages/staff.html
@@ -5,23 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starfsfólk</title>
-    <link rel="stylesheet" href="..\grid.css">
-    <link rel="stylesheet" href="..\styles.css">
+    
+    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
 </head>
 
 <body>
     <header>
-<<<<<<< HEAD
-        <div>
-            <h1 class="header__title">Prílihúsið</h1>
-            <ul class="header__list">
-                <li><a href="../index.html">Forsíða</a></li>
-                <li><a href="products.html">Vörur</a></li>
-                <li><a href="course.html">Námskeið</a></li>
-                <li><a href="staff.html">Starfsfólk</a></li>
-            </ul>
-=======
         <div class="header__row"> 
             <h1>Prílihúsið</h1>
             <ul>
@@ -31,44 +22,61 @@
                <li><a href="staff.html">Starfsfólk</a></li>
                <li><a href="cart.html">Karfa</a></li>
            </ul>
->>>>>>> 53d8e11ca1889445872476a598ab36b59cb337e0
         </div>
-</header>
+    </header>
     <main>
-        <div>
+        <div class="staff__grid">
+            <div class="staff__row">
+                <div class="staff__col">
+                    <div class="staff__card">
+                        <div class="staff__about">
+                            <img class="staff__img" src="../img/Karítas.jpg" alt="Karítas">
+                            <div class="staff__person">
+                                <h3 class="staff__name">Karítas Hrafnsdóttir</h3>
+                                <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div>
-                <img class="image__Karitas" src="..\img\Karítas.jpg" alt="Karítas">
+                <div class="staff__col">
+                    <div class="staff__card">
+                        <div class="staff__about">
+                            <img class="staff__img" src="../img/Úlfur Arnar.jpg" alt="Úlfur Arnar">
+                            <div class="staff__person">
+                                <h3 class="staff__name">Úlfur Arnar Guðjohnsen</h3>
+                                <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="about__Karitas">
-                <h3>Karítas Hrafnsdóttir</h3>
-                <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
-            </div>
-        </div>
-        <div>
             <div>
-                <img class="image__Ulfur" src="..\img\Úlfur Arnar.jpg" alt="Úlfur Arnar">
+                <div class="staff__col">
+                    <div class="staff__card">
+                        <div class="staff__about">
+                            <img class="staff__img" src="../img/Bergrós.jpg" alt="Bergrós">
+                            <div class="staff__person">
+                                <h3 class="staff__name">Bergrós Pétursdóttir</h3>
+                                <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>    
             </div>
-            <div class="about__Ulfur">
-                <h3>Úlfur Arnar Guðjohnsen</h3>
-                <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.</p>
-            </div>
-        </div>
-        <div>
             <div>
-                <img class="image__Bergros" src="..\img\Bergrós.jpg" alt="Bergrós">
-            </div>
-            <div class="about__Bergros">
-                <h3>Bergrós Pétursdóttir</h3>
-                <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
-            </div>    
-        </div>
-        <div>
-            <div>
-                <img class="image__Hannes" src="..\img\Hannes.jpg" alt="Hannes">
-            </div>
-            <div class="about__Hannes">
-                <h3>Hannes Flóki Andrason</h3>
-                <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá Prílihúsinu.</p>
+                <div class="staff__col">
+                    <div class="staff__card">
+                        <div class="staff__about">
+                            <img class="staff__img" src="../img/Hannes.jpg" alt="Hannes">
+                            <div class="staff__person">
+                                <h3 class="staff__name">Hannes Flóki Andrason</h3>
+                                <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá Prílihúsinu.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
