--- a/pages/cart.html
+++ b/pages/cart.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-	<div>
+	<div class="uppl">
 		<h2>Sendingarupplýsingar</h2>
 		<label for="nafn">Nafn:</label>
 		<input type="text" name="nafn" id="nafn">
@@ -281,38 +281,47 @@
 		</select>
 	</div>
 
-	<div>
-		<h2>Greiðsluupplýsingar</h2>
-		<label for="KN">Kortanúmer:</label>
+	<div class="uppl">
+        <h2 class="uppl__titill">Greiðsluupplýsingar</h2>
+        <div class="uppl__skrifa">
+            <div class="kortaNr">
+		        <label for="KN">Kortanúmer:</label>
+                <input type="text" id="KN">
+            </div>
+            <div class="kortHafi">
+                <label for="KH">Korthafi:</label>
+                <input type="text" id="KH">
+            </div>
+        </div>
+            <label for="gildisT">Gildistími:</label>
+        
+	    <div class="uppl__velja" id="gildisT">
+		    <label for="maunudur">Mán</label>
+		        <select>
+			    <option>01</option>
+    			<option>02</option>
+	    		<option>03</option>
+		    	<option>04</option>
+			    <option>05</option>
+    			<option>06</option>
+	    		<option>07</option>
+		    	<option>08</option>
+			    <option>09</option>
+    			<option>10</option>
+	    		<option>11</option>
+		    	<option>12</option>
+		    </select>
+	        
+		    <label for="Ar">Ár</label>
+		    <select>
+			    <option>2019</option>
+			    <option>2020</option>
+			    <option>2021</option>
+			    <option>2022</option>
+		    </select>
+        </div>
+  
 
-		<label for="KH">Korthafi:</label>
-
-		<label for="gildisT">Gildistími:</label>
-	<div>
-		<label for="maunudur">Mán</label>
-		<select>
-			<option>01</option>
-			<option>02</option>
-			<option>03</option>
-			<option>04</option>
-			<option>05</option>
-			<option>06</option>
-			<option>07</option>
-			<option>08</option>
-			<option>09</option>
-			<option>10</option>
-			<option>11</option>
-			<option>12</option>
-		</select>
-	</div>
-		<label for="Ar">Ár</label>
-		<select>
-			<option>2019</option>
-			<option>2020</option>
-			<option>2021</option>
-			<option>2022</option>
-		</select>
-	</div>
 	<button>Kaupa</button>
     </main>
     <footer>
