--- a/index.html
+++ b/index.html
@@ -78,39 +78,39 @@
        <div class="footer__col">
            <p class="footer__title">Vöruflokkar</p>
            <ul>
-               <li>Nauðsynjavörur</li>
-               <li>Frábærar vörur</li>
-               <li>Ómissandi vörur</li>
-               <li>Ótrúlegar vörur</li>
-               <li>Magnaðar vörur</li>
+               <li><a href="pages/products.html">Nauðsynjavörur</a></li>
+               <li><a href="pages/products.html">Frábærar vörur</a></li>
+               <li><a href="pages/products.html">Ómissandi vörur</a></li>
+               <li><a href="pages/products.html">Ótrúlegar vörur</a></li>
+               <li><a href="pages/products.html">Magnaðar vörur</a></li>
            </ul>
        </div>
        <div class="footer__col">
            <p class="footer__title">Vöruflokkar</p>
            <ul>
-               <li>Trylltar vörur</li>
-               <li>Geggjaðar vörur</li>
-               <li>Svakalegar vörur</li>
-               <li>Fáránlegar vörur</li>
-               <li>Klikkaðar vörur</li>
+               <li><a href="pages/products.html">Trylltar vörur</a></li>
+               <li><a href="pages/products.html">Geggjaðar vörur</a></li>
+               <li><a href="pages/products.html">Svakalegar vörur</a></li>
+               <li><a href="pages/products.html">Fáránlegar vörur</a></li>
+               <li><a href="pages/products.html">Klikkaðar vörur</a></li>
            </ul>
        </div>
        <div class="footer__col">
            <p class="footer__title">Námskeið</p>
            <ul>
-               <li>V0 - V1 námskeið</li>
-               <li>V2 - V4 námskeið</li>
-               <li>V5 - V7 námskeið</li>
-               <li>Fjallaklifur námskeið</li>
+               <li><a href="pages/course.html">V0 - V1 námskeið</a></li>
+               <li><a href="pages/course.html">V2 - V4 námskeið</a></li>
+               <li><a href="pages/course.html">V5 - V7 námskeið</a></li>
+               <li><a href="pages/course.html">Fjallaklifur námskeið</a></li>
            </ul>
        </div>
        <div class="footer__col">
            <p class="footer__title">Síður</p>
            <ul>
-               <li>Allar vörur</li>
-               <li>Starfsfólk</li>
-               <li>Námskeið</li>
-               <li>Karfa</li>
+               <li><a href="pages/products.html">Allar vörur</a></li>
+               <li><a href="pages/staff.html">Starfsfólk</a></li>
+               <li><a href="pages/course.html">Námskeið</a></li>
+               <li><a href="pages/cart.html">Karfa</a></li>
            </ul>
        </div>
       </div>
